width repair on smaller screen

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -32,9 +32,9 @@ body {
 }
 @media (max-width: 1366px) {
     .container-xl, .container-lg, .container-md, .container-sm, .container {
-        width:90%;
-        max-width:90%;
-        padding:0 25px;
+        width:95%;
+        max-width:95%;
+        padding:0 5px;
     }
 }
 main {min-height:500px;}
